[tool.poetry]
name = "rocketlc"
version = "0.1.0"
description = ""
authors = ["reinanbr <perseu912@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
mechanicalsoup = "^1.3.0"
cssutils = "^2.11.1"
setuptools = "^75.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
